Убрал папку bower_components, Добавил папки lib для сторонних библиотек

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,4 @@
-@import "../../bower_components/normalize-css/normalize.css";
-
+@import "./lib/index";
 @import "./var/index";
 @import "./mixins/index";
 @import "./base/index";
