--- a/src/templates/components/layout.jade
+++ b/src/templates/components/layout.jade
@@ -17,3 +17,5 @@ html(lang="en")
       block content
 
     script(src="js/main.js")
+    //- use for supporting svg-sprites in IE
+    script svg4everybody();
