Шаблон меню для мобильных устройств (jade, scss, js)

--- a/src/scss/base/type.scss
+++ b/src/scss/base/type.scss
@@ -9,10 +9,10 @@ body {
 a {
   color: $c-link-base;
 
-  &:link,
-  &:visited,
-  &:hover,
-  &:active {
-    color: $c-link-base;
-  }
+  // &:link,
+  // &:visited,
+  // &:hover,
+  // &:active {
+  //   color: $c-link-base;
+  // }
 }
